# apollo-solutions

./: README.md  docker-compose.yaml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/backend/: app.py  database.py  models.py  seeder.py  settings.py
backend/backend/enums/: categorias_enum.py
backend/backend/routes/: categoria.py  produto.py  promocao.py
backend/backend/schemas/: categoria.py  produto.py  promocao.py
backend/migrations/: env.py
backend/migrations/versions/: 024b1d4c38a9_.py  30a317464e4b_.py  4c1355e14353_.py  5aaf6f7a7a25_.py  b397db199ddd_.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: ProductForm.jsx  ProductTable.jsx
frontend/src/services/: api.js
